--- a/static/index.css
+++ b/static/index.css
@@ -2,12 +2,6 @@ body {
   margin: 0;
   font-family: "Roboto", Arial, sans-serif;
   line-height: 1.6;
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "left-sidebar content right-sidebar";
-  grid-template-columns: 250px 1fr 250px;
-  grid-template-rows: auto 1fr;
   height: 100vh;
   background-color: #f9f7f3; /* Light beige-white */
   color: #333;
@@ -18,36 +12,9 @@ body {
   scroll-padding-block-start: 1rem;
 }
 
-#left-sidebar {
-  grid-area: left-sidebar;
-  background-color: #f9f7f3; /* Beige-white */
-  border-right: 1px solid #e4d2a8; /* Beige border */
-  padding: 1.5em 1em;
-  overflow-y: auto;
-}
-
-#content {
-  grid-area: content;
-  background-color: #fff; /* White content area */
-  padding: 2em;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  margin: 10px;
-}
-
-#right-sidebar {
-  grid-area: right-sidebar;
-  background-color: #f9f7f3; /* Beige-white */
-  border-left: 1px solid #e4d2a8; /* Beige border */
-  padding: 1.5em 1em;
-  overflow-y: auto;
-}
-
 h1,
 h2,
 h3 {
-  color: #b66543; /* Brown for headers */
   margin-bottom: 0.5em;
 }
 
@@ -109,16 +76,19 @@ img {
   height: auto;
   margin: 1em 0;
   border-radius: 8px;
-  border: 1px solid #e4d2a8; /* Beige border */
 }
 
 a {
-  color: #b66543; /* Brown for general links */
   text-decoration: none;
+  color: #b66543;
 }
 
-a:hover {
-  color: #6abdaa; /* Turquoise hover */
+a:has(h1) {
+  color: #333333;
+}
+
+a:hover:not(:has(h1)) {
+  color: #6abdaa;
   text-decoration: underline;
 }
 
@@ -149,16 +119,6 @@ button:hover {
   background-color: #b66543; /* Brown hover */
 }
 
-footer {
-  grid-area: footer;
-  text-align: center;
-  padding: 1em;
-  background-color: #f9f7f3; /* Subtle beige-white */
-  color: #6abdaa; /* Turquoise text */
-  border-top: 1px solid #e4d2a8; /* Beige border */
-  font-size: 0.9em;
-}
-
 .language-selector {
   width: fit-content;
   font-size: 0.875rem;
@@ -166,8 +126,4 @@ footer {
   color: var(--white);
   background-color: transparent;
   border-color: transparent;
-}
-
-i {
-  font-size: 1rem;
 }
