--- a/component/docs.templ
+++ b/component/docs.templ
@@ -38,13 +38,13 @@ css headerDocsStyles() {
 	align-items: center;
 	justify-content: space-between;
 	grid-area: header;
-	background-color: #fff; 
+	background-color: var(--beige); 
     color: #333; 
     padding: 0rem 1rem;
 	font-size: 1.5em;
 	font-weight: bold;
 	text-align: center;
-	border-bottom: 4px solid #b66543; 
+	border-bottom: 4px solid var(--brown); 
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 	position: sticky;
 	top: 0;
@@ -54,7 +54,6 @@ css headerDocsStyles() {
 css rightSideStyles() {
 	grid-area: right-sidebar;
 	background-color: #fff; 
-  	border-left: 1px solid #e4d2a8;
 	padding: 1.5em 1em;
 	overflow-y: auto;
 }
@@ -62,7 +61,6 @@ css rightSideStyles() {
 css leftSideStyles() {
 	grid-area: left-sidebar;
 	background-color: #fff; 
-  	border-right: 1px solid #e4d2a8;
 	padding: 1.5em 1em;
 	overflow-y: auto;
 }
@@ -79,8 +77,10 @@ css contentStyles() {
 	grid-area: content;
 	background-color: #fff;
 	padding: 2em;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 	overflow-y: auto;
+	position: relative;
+	z-index: 1;
 }
 
 templ DocsPage(content string, headings []markdown.Heading) {
